...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vvR-Qc-Z9E" userLabel="Neighborhood Button">
                                                        <rect key="frame" x="24" y="5" width="336" height="30"/>
                                                        <state key="normal" title="Bairro">
                                                            <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                            <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                <rect key="frame" x="20" y="103" width="360" height="40"/>
                                                <subviews>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Referência Ex: Shopping Tijuca" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ah4-oz-Cgc" customClass="CaronaeTextField">
                                                        <rect key="frame" x="0.0" y="14" width="360" height="32"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
...
                                                <rect key="frame" x="20" y="153" width="360" height="40"/>
                                                <subviews>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Rota Ex: Maracanã, Leopoldina, Linha Vermelha" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="L9i-M2-F5w" customClass="CaronaeTextField">
                                                        <rect key="frame" x="0.0" y="14" width="360" height="32"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vII-kc-e4x">
                                                        <rect key="frame" x="24" y="5" width="336" height="30"/>
                                                        <state key="normal" title="Centro Universitário">
                                                            <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                            <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                                <rect key="frame" x="43" y="2" width="30" height="27"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                                <state key="normal" title="Ter">
                                                                    <color key="titleColor" red="0.54117647059999996" green="0.54117647059999996" blue="0.54117647059999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                </state>
...
                                                                <rect key="frame" x="113" y="2" width="30" height="27"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                                <state key="normal" title="Qui">
                                                                    <color key="titleColor" red="0.54117647059999996" green="0.54117647059999996" blue="0.54117647059999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                </state>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5VK-HF-o3E">
                                                        <rect key="frame" x="49" y="8" width="311" height="29"/>
                                                        <accessibility key="accessibilityConfiguration" label="date"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <state key="normal" title="Qua 7 Out 17h00m"/>
...
                                                        <rect key="frame" x="0.0" y="0.0" width="360" height="200"/>
                                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <accessibility key="accessibilityConfiguration" label="notes"/>
                                                        <color key="textColor" red="0.57647061347961426" green="0.58039218187332153" blue="0.57647061347961426" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                                <state key="normal" image="ButtonSignout">
                                                    <color key="titleColor" red="0.92941176470588238" green="0.1803921568627451" blue="0.050980392156862744" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                <rect key="frame" x="20" y="20" width="71" height="30"/>
                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                                <state key="normal" title="Meu perfil">
                                                    <color key="titleColor" red="0.33725491166114807" green="0.33725491166114807" blue="0.34509804844856262" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Menu" id="wdG-lq-Sxn"/>
                    <connections>
                        <outlet property="profileCourseLabel" destination="wzZ-6k-4Fq" id="6gX-tN-MFb"/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ESO-TG-2Ch" sceneMemberID="viewController">
