...
        
        if !isAutoLoginMethod {
            idTextField.text = ""
            tokenTextField.text = ""
        }
        
        let changeLoginMethodbuttonTitle = isAutoLoginMethod ? "Entrar manualmente" : "Entrar com universidade"
        let loginButtonTitle = isAutoLoginMethod ? "Entrar com universidade" : "Entrar"
        let loginButtonIcon = isAutoLoginMethod ? UIImage(named: "InstitutionIcon") : nil
        UIView.animate(withDuration: 0.25, animations: {
            if self.isAutoLoginMethod {
                self.idTextField.alpha = 0.0
                self.tokenTextField.alpha = 0.0
...
